# AboutCMake

./: Build_VS2017_X64.bat  CMakeLists.txt  Main.cpp
Hello/: CMakeLists.txt  Hello.cpp
Hey/: Hey.cpp  Hey.h
Macro/: CMakeLists.txt
