CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(AboutCMake)

ADD_SUBDIRECTORY(Hello)

SOURCE_GROUP( "Hey" FILES "Hey/Hey.h" "Hey/Hey.cpp" )

ADD_EXECUTABLE(AboutCMake Main.cpp Common.h)

TARGET_LINK_LIBRARIES(AboutCMake Hello)

MESSAGE(STATUS "PROJECT_SOURCE_DIR: " ${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(./Hello HELLO_FILES)
MESSAGE(STATUS "HELLO FILES: " ${HELLO_FILES})

MESSAGE(STATUS "CMAKE_FRAMEWORK_PATH: " ${CMAKE_FRAMEWORK_PATH})

FIND_PATH(HELLO_H_PATH Hello.h .)
MESSAGE(STATUS "HELLO_H_PATH: " ${HELLO_H_PATH})

FIND_PATH(HELLO_H_PATH Hello.h ./Hello)
MESSAGE(STATUS "HELLO_H_PATH: " ${HELLO_H_PATH})